# YOLOv9

./: .gitignore  export_onnx.py  inference_onnx.py  pyproject.toml
yolo/config/model/: v9-e.yaml
yolo/config/task/: train.yaml
yolo/tools/: README.md  onnx_export.py  onnx_inference.py
yolo/utils/: dataset_utils.py  logging_utils.py
