[project]
name = "yolov9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "faster-coco-eval>=1.6.7",
    "graphviz>=0.21",
    "hydra-core>=1.3.2",
    "lightning>=2.5.4",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pycocotools>=2.0.10",
    "requests>=2.32.5",
    "rich==14.0.0",
    "torch==2.8.0",
    "torchvision>=0.23.0",
    "wandb>=0.21.3",
]

[tool.uv.sources]
torch = [
    { index = "torch-cu129" },
]

[[tool.uv.index]]
name = "torch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
